--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,37 +1,32 @@
-server.port=9000
-# 数据库配置
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/market_db?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-#spring.datasource.username=root
-#spring.datasource.password=root
+server.port =  9000
+mybatis.mapper-locations= classpath:/mapper/*.xml
 
-spring.shardingsphere.datasource.names= ds0,ds1
+spring.shardingsphere.datasource.names=ds0,ds1
 
-#配置第一个数据库
-spring.shardingsphere.datasource.ds0.type=com.alibaba.druid.pool.DruidDataSource
-spring.shardingsphere.datasource.ds0.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds0.jdbc-url=jdbc:mysql://localhost:3306/ds0?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8
-spring.shardingsphere.datasource.ds0.username=root
-spring.shardingsphere.datasource.ds0.password=root
+spring.shardingsphere.datasource.ds_0.jdbc-url=jdbc:mysql://127.0.0.1:3306/ds0?serverTimezone=UTC&useSSL=false
+spring.shardingsphere.datasource.ds_0.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds_0.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds_0.username=root
+spring.shardingsphere.datasource.ds_0.password=root
+spring.shardingsphere.datasource.ds_0.max-active=16
 
-#配置第二个数据库
-spring.shardingsphere.datasource.ds1.type=com.alibaba.druid.pool.DruidDataSource
-spring.shardingsphere.datasource.ds1.driver-class-name=com.mysql.jdbc.Driver
-spring.shardingsphere.datasource.ds1.jdbc-url=jdbc:mysql://localhost:3306/ds1?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8
-spring.shardingsphere.datasource.ds1.username=root
-spring.shardingsphere.datasource.ds1.password=root
+spring.shardingsphere.datasource.ds_1.jdbc-url=jdbc:mysql://127.0.0.1:3306/ds1?serverTimezone=UTC&useSSL=false
+spring.shardingsphere.datasource.ds_1.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds_1.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds_1.username=root
+spring.shardingsphere.datasource.ds_1.password=root
+spring.shardingsphere.datasource.ds_1.max-active=16
 
-
-#配置分库策略
-spring.shardingsphere.rules.sharding.tables.t_order.database-strategy.standard.sharding-column=user_id
-spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=ds$->{user_id % 2}
-
-#配置分表策略
-spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_id
 spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds$->{0..1}.t_order$->{0..1}
-spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order$->{order_id % 2}
 
-#mybatis-plus配置
-mybatis-plus.mapper-locations= classpath*:mapper/*.xml
+spring.shardingsphere.rules.sharding.tables.user.database-strategy.standard.sharding-column=user_id
+spring.shardingsphere.rules.sharding.tables.user.database-strategy.standard.sharding-algorithm-name=alg_db_user
+spring.shardingsphere.rules.sharding.sharding-algorithms.alg_db_user.type=MOD
+spring.shardingsphere.rules.sharding.sharding-algorithms.alg_db_user.props.sharding-count=2
+spring.shardingsphere.rules.sharding.sharding-algorithms.alg_db_user.props.algorithm-expression=ds$->{user_id%2}
 
-
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_id
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=alg_table_order
+spring.shardingsphere.rules.sharding.sharding-algorithms.alg_table_order.type=MOD
+spring.shardingsphere.rules.sharding.sharding-algorithms.alg_table_order.props.sharding-count=2
+spring.shardingsphere.rules.sharding.sharding-algorithms.alg_table_order.props.algorithm-expression = t_order$->{order_id%2}
