成功实现分库分表

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,30 +3,35 @@ mybatis.mapper-locations= classpath:/mapper/*.xml
 
 spring.shardingsphere.datasource.names=ds0,ds1
 
-spring.shardingsphere.datasource.ds_0.jdbc-url=jdbc:mysql://127.0.0.1:3306/ds0?serverTimezone=UTC&useSSL=false
-spring.shardingsphere.datasource.ds_0.type=com.zaxxer.hikari.HikariDataSource
-spring.shardingsphere.datasource.ds_0.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds_0.username=root
-spring.shardingsphere.datasource.ds_0.password=root
-spring.shardingsphere.datasource.ds_0.max-active=16
+spring.shardingsphere.datasource.ds0.jdbc-url=jdbc:mysql://127.0.0.1:3306/ds0?serverTimezone=UTC&useSSL=false
+spring.shardingsphere.datasource.ds0.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds0.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds0.username=root
+spring.shardingsphere.datasource.ds0.password=root
+spring.shardingsphere.datasource.ds0.max-active=16
 
-spring.shardingsphere.datasource.ds_1.jdbc-url=jdbc:mysql://127.0.0.1:3306/ds1?serverTimezone=UTC&useSSL=false
-spring.shardingsphere.datasource.ds_1.type=com.zaxxer.hikari.HikariDataSource
-spring.shardingsphere.datasource.ds_1.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds_1.username=root
-spring.shardingsphere.datasource.ds_1.password=root
-spring.shardingsphere.datasource.ds_1.max-active=16
+spring.shardingsphere.datasource.ds1.jdbc-url=jdbc:mysql://127.0.0.1:3306/ds1?serverTimezone=UTC&useSSL=false
+spring.shardingsphere.datasource.ds1.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds1.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds1.username=root
+spring.shardingsphere.datasource.ds1.password=root
+spring.shardingsphere.datasource.ds1.max-active=16
 
 spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds$->{0..1}.t_order$->{0..1}
 
-spring.shardingsphere.rules.sharding.tables.user.database-strategy.standard.sharding-column=user_id
-spring.shardingsphere.rules.sharding.tables.user.database-strategy.standard.sharding-algorithm-name=alg_db_user
-spring.shardingsphere.rules.sharding.sharding-algorithms.alg_db_user.type=MOD
-spring.shardingsphere.rules.sharding.sharding-algorithms.alg_db_user.props.sharding-count=2
-spring.shardingsphere.rules.sharding.sharding-algorithms.alg_db_user.props.algorithm-expression=ds$->{user_id%2}
+#分库
+spring.shardingsphere.rules.sharding.tables.t_order.database-strategy.standard.sharding-column=user_id
+spring.shardingsphere.rules.sharding.tables.t_order.database-strategy.standard.sharding-algorithm-name=my_database
+#库配置分片算法
+spring.shardingsphere.rules.sharding.sharding-algorithms.my_database.type=INLINE
+#按模运算分配
+spring.shardingsphere.rules.sharding.sharding-algorithms.my_database.props.algorithm-expression = ds$->{user_id%2}
 
+#分表
 spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_id
-spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=alg_table_order
-spring.shardingsphere.rules.sharding.sharding-algorithms.alg_table_order.type=MOD
-spring.shardingsphere.rules.sharding.sharding-algorithms.alg_table_order.props.sharding-count=2
-spring.shardingsphere.rules.sharding.sharding-algorithms.alg_table_order.props.algorithm-expression = t_order$->{order_id%2}
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=my_table
+#表配置分片算法
+spring.shardingsphere.rules.sharding.sharding-algorithms.my_table.type=INLINE
+spring.shardingsphere.rules.sharding.sharding-algorithms.my_table.props.algorithm-expression = t_order$->{order_id%2}
+
+spring.shardingsphere.props.sql.show = true
