完成分库分表插入查询

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,5 @@ spring.shardingsphere.rules.sharding.sharding-algorithms.my_table.type=INLINE
 spring.shardingsphere.rules.sharding.sharding-algorithms.my_table.props.algorithm-expression = t_order$->{order_id%2}
 
 spring.shardingsphere.props.sql.show = true
+
+logging.level.com.company.shardingSphere.mapper = DEBUG
